<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cas Liemie</string>
    <string name="Logo">Logo</string>
    <string name="User">Utilisateur</string>
    <string name="Password">Mot de Passe</string>
    <string name="Connect">Connexion</string>
    <string name="rememberme">Se souvenir de moi</string>
    <string name="login">Utilisateur : </string>
    <string name="mdp">Mot de passe : </string>

    <string name="notification">Notification</string>
    <string name="notification_title">Connexion réussie</string>
    <string name="notification_desc">Votre session est active</string>



    <string name="menu_list">Liste des patients</string>
    <string name="menu_import">Importer les patients</string>
    <string name="menu_export">Exporter les patients</string>
    <string name="title_activity_affiche_liste_patient">AfficheListePatient</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_modification_patient">ModificationPatient</string>
    <string name="title_activity_act_import">Importer</string>
    <string name="title_activity_act_export">Exporter</string>

    <string name="refresh_button">Refresh</string>
</resources>
