     <menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rr.MainActivity" >

         <item
        android:id="@+id/menu_list"
        android:icon="@drawable/ilist"
        android:showAsAction="always"
        android:title="@string/menu_list"/>

         <item
             android:id="@+id/refresh_button"
             android:orderInCategory="99"
             android:icon="@drawable/ic_menu_refresh"
             android:showAsAction="ifRoom"
             android:title="@string/refresh_button"/>

         <item
             android:id="@+id/action_settings"
             android:orderInCategory="100"
             android:showAsAction="never"
             android:title="@string/action_settings"/>

</menu>