<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_Connexion"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="horizontal"
    tools:context="${relativePackage}.${activityClass}" >

    <Space
        android:layout_width="53dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="42dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="0" />

    <Space
        android:layout_width="166dp"
        android:layout_height="1dp"
        android:layout_column="2"
        android:layout_row="0" />

    <ImageView
        android:layout_width="291dp"
        android:layout_height="291dp"
        android:id="@+id/imageView"
        android:layout_row="1"
        android:layout_column="1"
        android:src="@drawable/ic_launcher" />



    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_row="0" />

    <EditText
        android:id="@+id/TB_Utilisateur"
        android:layout_column="1"
        android:layout_gravity="end|bottom"
        android:layout_row="3"
        android:ems="10"
        android:hint="@string/User"
        android:inputType="text"
        android:text="Corentin"
        android:layout_width="282dp">
    	<requestFocus />
    </EditText>

    <Space
        android:layout_width="1dp"
        android:layout_height="62dp"
        android:layout_column="0"
        android:layout_row="3" />

    <EditText
        android:id="@+id/TB_Password"
        android:layout_column="1"
        android:layout_gravity="end|bottom"
        android:layout_row="4"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_width="273dp">
    </EditText>

    <Space
        android:layout_width="1dp"
        android:layout_height="64dp"
        android:layout_column="0"
        android:layout_row="4" />

    <Space
        android:layout_width="1dp"
        android:layout_height="32dp"
        android:layout_column="0"
        android:layout_row="5" />

    <Button
        android:id="@+id/button1"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="6"
        android:text="@string/Connect" />

    <Space
        android:layout_width="1dp"
        android:layout_height="76dp"
        android:layout_column="0"
        android:layout_row="6" />

    <Space
        android:layout_width="100dp"
        android:layout_height="77dp"
        android:layout_column="1"
        android:layout_row="7" />

    <Space
        android:layout_width="100dp"
        android:layout_row="7"
        android:layout_column="2" />

</GridLayout>
